--- a/style/screen.css
+++ b/style/screen.css
@@ -389,18 +389,18 @@ span {
 
 /* The Modal (background) */
 .modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
+	display: none;
+	position: fixed;
+	z-index: 1;
+	padding-top: 100px;
 	left: 10%;
 	top: 10%;
 	margin: auto;
-	width: 85%; /* Full width */
-	height: 600px; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
+	width: 85%;
+	height: 600px;
+	overflow: auto;
 	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	background-color: rgba(0,0,0,0.4);
 }
 
 /* Modal Content */
